src/main.css
/*======================= General =======================*/
#Haystack-UI {
  margin: auto;
  display: inline-block;
  position: relative;
  width: auto;
  min-width: 150px;
  font-family: sans-serif;
}
#Haystack-UI input[type="search"] {
  position: relative;
  top: 0px;
  width: 100%;
  height: 33px;
  padding: 8px 30px 8px 30px;
  font-size: 1em;
  font-weight: 400;
  border: none;
  border-radius: 5px;
  background-image: url("./magnifyingglass.svg");
  background-position: 6px;
  background-repeat: no-repeat;
  background-size: 19px;
  -webkit-appearance: none;
  -webkit-transition: 300ms;
  -moz-transition: 300ms;
  -o-transition: 300ms;
  transition: 300ms;
}
#Haystack-UI input[type="search"]:focus { outline: none; box-shadow: none;}
#Haystack-UI input[type="search"].expanded {
  border-radius: 5px 5px 0px 0px;
}
#Haystack-UI input::-webkit-search-cancel-button {
  -webkit-appearance: none;
  display: none;
}
#Haystack-UI #clear {
  position: absolute;
  right: 8px;
  top: 0px;
  font-family: arial, sans-serif;
  font-size: 1.7em;
  font-weight: 100;
}
#Haystack-UI #clear:hover {
  cursor: pointer;
}
#Haystack-UI #prediction-text {
  position: absolute;
  top: -1px;
  left: 0px;
  text-align: left;
  font-weight: 400;
  width: 100%;
  height: 33px;
  padding: 8px 30px 8px 30px;
  opacity: 0.35;
  font-size: 1em;
  white-space: nowrap;
  overflow: hidden;
  cursor: text;
}
#Haystack-UI #suggestions {
  position: absolute;
  top: 33px; /* search bar height */
  border-radius: 0px 0px 5px 5px;
  font-size: 1em;
  width: 100%;
  height: auto;
  text-align: left;
}
#Haystack-UI #suggestion-list {
  list-style: none;
  margin: 0px;
  padding: 0px;
  overflow-x: hidden;
}
#Haystack-UI #suggestion-list hr {
  margin: 0px;
}
#Haystack-UI #suggestion-list li {
  padding: 7px 0px 7px 10px;
  white-space: nowrap;
  text-overflow: ellipsis;
  -webkit-transition: 0.4s;
  -moz-transition: 0.4s;
  -o-transition: 0.4s;
  transition: 0.4s;
  position: relative;
}
#Haystack-UI #suggestion-list li:hover {
  cursor: pointer;
  font-size: 1.1em;
}
#Haystack-UI #suggestions h4 {
  text-align: center;
  margin: 14px;
}


/*======================= Animations =======================*/
.slideDown-enter {
  transform-origin: center top;
  transform: scaleY(0);
}
.slideDown-enter.slideDown-enter-active {
  transform-origin: center top;
  transform: scaleY(1);
	transition-duration: 200ms;
}
.slideDown-leave {
  transform-origin: center top;
  transform: scaleY(1);
}
.slideDown-leave.slideDown-leave-active {
  transform-origin: center top;
  transform: scaleY(0);
	transition-duration: 200ms;
}



/*======================= Themes =======================*/

/***** Light *****/
#Haystack-UI.theme-light input[type="search"],
#Haystack-UI.theme-light #suggestions {
  background-color: rgba(247, 247, 247, 0.75);
}
#Haystack-UI.theme-light #clear {
  color: black;
}
#Haystack-UI.theme-light #clear:hover {
  color: grey;
}
#Haystack-UI.theme-light #suggestion-list li {
  color: #757576;
  border-top: 1px solid #dadada;
}
#Haystack-UI.theme-light #suggestion-list li:hover,
#Haystack-UI.theme-light #suggestion-list li.active {
  color: black;
  outline: none;
}
#Haystack-UI.theme-light #suggestions h4 { color: grey; }


/***** Dark *****/
#Haystack-UI.theme-dark input[type="search"],
#Haystack-UI.theme-dark #suggestions {
  background-color: rgba(165, 165, 165, 0.5);
}
#Haystack-UI.theme-dark #clear {
  color: grey;
}
#Haystack-UI.theme-dark #clear:hover {
  color: black;
}
#Haystack-UI.theme-dark #suggestion-list li {
  color: grey;
  border-top: 1px solid #b5b5b5;
}
#Haystack-UI.theme-dark #suggestion-list li:hover,
#Haystack-UI.theme-dark #suggestion-list li.active {
  color: black;
  outline: none;
}
#Haystack-UI.theme-dark #suggestions h4 { color: grey; }


/***** Ghost *****/
#Haystack-UI.theme-ghost input[type="search"],
#Haystack-UI.theme-ghost #suggestions {
  background-color: transparent;
  border: 2px solid black;
}
#Haystack-UI.theme-ghost #suggestions {
  border-top: none;
}
#Haystack-UI.theme-ghost #prediction-text { left: 2px; }
#Haystack-UI.theme-ghost #clear {
  color: black;
}
#Haystack-UI.theme-ghost #clear:hover {
  color: grey;
}
#Haystack-UI.theme-ghost #suggestion-list li {
  color: #757576;
}
#Haystack-UI.theme-ghost #suggestion-list li:hover,
#Haystack-UI.theme-ghost #suggestion-list li.active {
  color: black;
  outline: none;
}
#Haystack-UI.theme-ghost #suggestions h4 { color: grey; }

